--- a/DenseNet.ipynb
+++ b/DenseNet.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "skin_df = pd.read_csv(\"C:/Users/Annu/Desktop/Sem 4/HAM10000_metadata.csv\")\n",
+    "skin_df = pd.read_csv(\"HAM10000_metadata.csv\")\n",
     "\n",
     "\n",
     "skin_df['path'] = skin_df['image_id'].map(imageid_path_dict.get)\n",
